--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -239,6 +239,7 @@
 
             .narrative {
                 padding: 50px;
+                margin: unset;
             }
 
             .aboutES-open {
@@ -309,7 +310,7 @@
 
     <section>
         <div class="container">
-            <p class="text-lg-center titleName">實境解謎團體動力工作坊</p>
+            <p class="text-lg-center titleName">實境解謎團體工作坊</p>
             <div class="swiper-container mtb-75">
                 <div class="swiper-wrapper ">
                     <div class="swiper-slide"><img class="bannerSize" src="img/ES-1.jpg" alt=""></div>
