--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -206,10 +206,10 @@
             .feePhoneText-1 {
                 font-size: 20px;
             }
-/* 
+
             .feePhonecontan {
-                height: 60px;
-            } */
+                margin-top: 40px;
+            }
 
         }
     </style>
@@ -248,9 +248,8 @@
     <section class="mtb-200">
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-2 col-lg-1 d-flex justify-content-center"><img class="logo-white-width"
-                        src="img/logo-white.png" alt=""></div>
-                <div class="col-8 col-lg-4 d-flex justify-content-center">
+                <div class="col-2 col-lg-1"><img class="logo-white-width" src="img/logo-white.png" alt=""></div>
+                <div class="col-8 col-lg-5">
                     <p class="title">收費方式</p>
                 </div>
             </div>
@@ -301,7 +300,7 @@
         <div class="d-sm-none d-flex justify-content-center feePhone">
             <!-- <img width="" src="/img/toll-mb.png" alt=""> -->
             <div class="row justify-content-center feePhoneText">
-                <div class="col-12 feePhonecontan"><img src="./img/fee-Charter-phone.png" alt="">
+                <div class="col-12 "><img src="./img/fee-Charter-phone.png" alt="">
                     <h2>包場</h2>
                     <p class="feePhoneText-1">平日1599元/場 <br>假日1999元/場 </p class="">
                 </div>
