--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -48,38 +48,47 @@
         .front1 {
             background-image: url(img/front1.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
         .front2 {
             background-image: url(img/front2.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
         .front3 {
             background-image: url(img/front3.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
         .front4 {
             background-image: url(img/front4.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
         .front5 {
             background-image: url(img/front5.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
         .front6 {
             background-image: url(img/front6.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
         .front7 {
             background-image: url(img/front7.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
         .front8 {
             background-image: url(img/front8.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
         .front9 {
             background-image: url(img/front9.png);
             background-repeat: no-repeat;
+            background-position: center;
         }
 
         .back1 {
@@ -90,6 +99,7 @@
             transform: rotateY(180deg);
             background-image: url('img/back1.png');
             background-repeat: no-repeat;
+            background-position: center;
         }
         .back2 {
             -ms-transform: rotateY(180deg);
@@ -99,6 +109,7 @@
             transform: rotateY(180deg);
             background-image: url('img/back2.png');
             background-repeat: no-repeat;
+            background-position: center;
         }
         .back3 {
             -ms-transform: rotateY(180deg);
@@ -108,6 +119,7 @@
             transform: rotateY(180deg);
             background-image: url('img/back3.png');
             background-repeat: no-repeat;
+            background-position: center;
         }
 
         /* .card_box:hover{
@@ -192,6 +204,7 @@
 
             .title {
                 font-size: 48px;
+                text-align: center;
             }
 
             .logo-white-width {
@@ -275,9 +288,8 @@
     <section class="mtb-200">
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-2 col-lg-1 d-flex justify-content-center"><img class="logo-white-width"
-                        src="img/logo-white.png" alt=""></div>
-                <div class="col-9 col-lg-4 d-flex justify-content-center">
+                <div class="col-2 col-lg-1"><img class="logo-white-width" src="img/logo-white.png" alt=""></div>
+                <div class="col-8 col-lg-5">
                     <p class="title">最新消息</p>
                 </div>
             </div>
