--- a/EscapeRoom/ES-theme-doctor.html
+++ b/EscapeRoom/ES-theme-doctor.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>ES-theme-doctor</title>
     <style>
         html,
         body {
@@ -608,7 +608,7 @@
                         <div class="Border d-flex justify-content-center align-items-center"
                             style="text-align: center; transform:translateY(35px)">
                             <div class="col-lg-3">
-                                <img src="../EscapeRoom/test/img/key.png" alt="">
+                                <img src="../EscapeRoom/test/img/key_d.png" alt="">
                                 <div style="color: white; font-size: 16px; line-height: 36px;">
                                     <p style="color: #549FB6;font-size: 36px; line-height:48px;">
                                         特別提醒</p>
@@ -738,7 +738,7 @@
                         alt=""></div>
                 <div class="col-12 margin-top50">
                     <p> <span class="speakerloser">『御醫』總是掌握了當時的最高醫術，</span> <br>
-                        <span class="speakerBoss"> 並受到皇帝極度信任才能成為獨當一面的御醫。</span></p>
+                        <span class="speakerBoss"> 並受到皇帝信任才能成為獨當一面的御醫。</span></p>
                 </div>
                 <div class="col-12 margin-top75"><img width="100%" height="228px" src="./doctorImg/comic_02_p.png"
                         alt=""></div>
@@ -770,7 +770,7 @@
                 </div>
                 <div class="col-12 margin-top75"><img src="./doctorImg/key_d_p.png" alt=""> </div>
                 <p class="titleName margin-top50">特別提醒</p>
-                <p class="speakerBoss"> 要揭穿御醫的詭計，必須了解各種藥理針灸醫術， 記憶與理解的情報很多，也可能有陰森血腥的場景。</p>
+                <p class="speakerBoss"> 要揭穿御醫的詭計，必須了解各種藥理針灸醫術， 記憶與理解的情報很多，也有陰森血腥的場景。</p>
             </div>
         </div>
         <section>
