--- a/EscapeRoom/ES-theme-police.html
+++ b/EscapeRoom/ES-theme-police.html
@@ -412,8 +412,10 @@
                 <div class="col-lg-5 text-center">
                     <p class="speakerBoss">『可是.....找不到合理的犯案動機啊......』</p>
                     <p class="speaker">「不是爭風吃醋引起的殺機嗎？」</p>
-                    <p class="speakerBoss">『不！我想沒這麼單純！這樣下去，嫌犯一定會被釋放！</p>
-                    <p class="speakerBoss">都已經抓到人了，我們不能這麼簡單就鬆手，走吧！』</p>
+                    <p class="speakerBoss">『不！沒這麼單純！</p>
+                    <p class="speakerBoss">這樣下去，嫌犯一定會被釋放！</p>
+
+                    <p class="speakerBoss">都已經抓到人了，不能這麼簡單就鬆手！』</p>
                 </div>
             </div>
         </div>
@@ -434,7 +436,9 @@
             <div class="row mt-75">
                 <div class="col-lg-12 text-center">
                     <p class="speaker">「要從頭搜查嗎？！只剩下一小時而已...... 」</p class="speakerBoss">
-                    <p class="speakerBoss">『只能這樣了！找到關鍵證據，讓嫌犯在偵訊中認罪！』</p>
+                    <p class="speakerBoss">『只能這樣了！找到關鍵證據，</p>
+                    <p class="speakerBoss">讓嫌犯在偵訊中認罪！』</p>
+
                 </div>
             </div>
         </div>
