--- a/EscapeRoom/ES-aboutES.html
+++ b/EscapeRoom/ES-aboutES.html
@@ -65,6 +65,9 @@
             border-image: linear-gradient(to right, #B0B63F 0%, #21210C 100%);
             border-image-slice: 1; */
         }
+        .logo-white-width{
+            width: 100%;
+        }
 
         .borderA:before {
             content: '';
