--- a/EscapeRoom/ES-news.html
+++ b/EscapeRoom/ES-news.html
@@ -138,6 +138,9 @@
             -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
         }
+        .logo-white-width{
+            width: 100%;
+        }
 
         @media(max-width:1420px) {
             .nav {
