--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -93,6 +93,9 @@
         .mr-20{
             margin-right: 20px;
         }
+        .logo-white-width{
+            width: 100%;
+        }
 
 
         @media(max-width:1420px) {
