--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -263,7 +263,7 @@
         <div class="container box pc">
             <div class="row fee-Charter justify-content-center">
                 <div class="col-lg-3 col-sm-3"><img width="100%" src="./img/fee-Charter.png" alt=""></div>
-                <div class="col-lg-3 col-sm-3"><img width="100%" src="./img/fee-Fight.png" alt=""></div>
+                <div class="col-lg-3 col-sm-3"><img width="100%" src="./img/fee-Charter.png" alt=""></div>
             </div>
             <div class="row justify-content-center fee-CharterText">
                 <div class="col-lg-3 col-sm-3">
