.....原來是大小寫問題阿

--- a/EscapeRoom/ES-fee.html
+++ b/EscapeRoom/ES-fee.html
@@ -307,7 +307,7 @@
                     <h2>包場</h2>
                     <p class="feePhoneText-1">平日1599元/場 <br>假日1999元/場 </p class="">
                 </div>
-                <div class="col-12 feePhonecontan"><img src="./img/fee-fight-phone.png" alt="">
+                <div class="col-12 feePhonecontan"><img src="./img/fee-Fight-phone.png" alt="">
                     <h2>併組</h2>
                     <p class="feePhoneText-1">平日250元/場 <br>假日300元/場 </p class="">
                 </div>
