--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -680,7 +680,8 @@
         <section class="p-0" style="padding-top:200px; position:relative">
             <div class="container">
                 <div class="row justify-content-center">
-                    <img class="col-lg-10" width="100%" src="../EscapeRoom/test/img/bomb3.png" alt="">
+                    <div class="col-lg-10 col-12"><img width="100%" src="../EscapeRoom/test/img/bomb3.png" alt=""></div>
+                   
                 </div>
             </div>
             <div class="container-fluid" style="position:absolute; top:100px; right:0">
