--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -622,7 +622,7 @@
     </section>
 
     <section>
-        <div class="difficulty2">
+        <div class="difficulty2" style="z-index:99;">
             <div
                 style="font-size: 20px; color: white; text-align:center; line-height: 50px; transform: skewY(4.5deg); padding-top:50px; ">
                 <p>過關率：15％</p>
@@ -666,7 +666,7 @@
                         src="../EscapeRoom/test/img/soldiers2.png" alt="">
                 </div>
             </div>
-            <div class="soldiermobile p-75" style="display:none; z-index:99;">
+            <div class="soldiermobile p-75" style="display:none">
                 <img class="col-12" data-aos="fade-left" src="../EscapeRoom/test/img/soldiers3.png" alt="">
                 <div class="text col-12 d-flex"
                     style="color: white; font-size:16px; line-height: 36px; text-align: center; flex-direction: column;">
