--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -622,7 +622,7 @@
     </section>
 
     <section>
-        <div class="difficulty2" style="z-index:99;">
+        <div class="difficulty2" style="position:relative; z-index:99;">
             <div
                 style="font-size: 20px; color: white; text-align:center; line-height: 50px; transform: skewY(4.5deg); padding-top:50px; ">
                 <p>過關率：15％</p>
