--- a/EscapeRoom/ES-theme-bomb.html
+++ b/EscapeRoom/ES-theme-bomb.html
@@ -318,6 +318,7 @@
         .difficulty2 {
             background: linear-gradient(0deg, #200B0B 0%, #A74141 100%);
             transform: skewY(-4.5deg);
+            position:relative;
             z-index: 99;
             margin-top: -154px;
             display: none;
@@ -622,7 +623,7 @@
     </section>
 
     <section>
-        <div class="difficulty2" style="position:relative; z-index:99;">
+        <div class="difficulty2">
             <div
                 style="font-size: 20px; color: white; text-align:center; line-height: 50px; transform: skewY(4.5deg); padding-top:50px; ">
                 <p>過關率：15％</p>
