--- a/EscapeRoom/index.html
+++ b/EscapeRoom/index.html
@@ -192,7 +192,7 @@
 </head>
 
 <body>
-    <a href="/EscapeRoom/ES-theme.html">
+    <a href="./ES-theme.html">
         <div class="bg">
             <div class="container">
                 <div id="scene" class="scene">
